# chat

./: Cargo.toml  LICENSE  README.md  config.yaml
flutter_web_build/: flutter_service_worker.js  index.html  main.dart.js  main.dart.js.map  manifest.json
flutter_web_build/web/: flutter_service_worker.js  index.html  main.dart.js  main.dart.js.map
flutter_web_build/web/assets/: NOTICES
src/: chat.rs  config.rs  http_server.rs  main.rs  repository.rs
src/chat/: message.rs
src/repository/: mongo.rs
src/repository/mongo/: message.rs  room.rs  token.rs
